Prevented body horizontal scroll.

--- a/admin_interface/templates/admin_interface/css/admin-interface-fix.css
+++ b/admin_interface/templates/admin_interface/css/admin-interface-fix.css
@@ -1,3 +1,7 @@
+.admin-interface {
+    overflow-x: hidden;
+}
+
 /* fix login */
 .admin-interface.login #container {
     width: 100%;
